<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.privatepublic.pi.synth</groupId>
	<artifactId>SynthPi</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.5.5</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>de.privatepublic.pi.synth.SynthPi</mainClass>
						</manifest>
					</archive>
					<!-- 
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs> -->
					<descriptors>
						<descriptor>boxed-assembly.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.jaudiolibs</groupId>
			<artifactId>jnajack</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.jaudiolibs</groupId>
			<artifactId>audioservers-api</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.jaudiolibs</groupId>
			<artifactId>audioservers-jack</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.jaudiolibs</groupId>
			<artifactId>audioservers-javasound</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20140107</version>
		</dependency>
		<dependency>
			<groupId>org.apache.directory.studio</groupId>
			<artifactId>org.apache.commons.io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>9.3.2.v20150730</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty.websocket</groupId>
			<artifactId>websocket-server</artifactId>
			<version>9.3.2.v20150730</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlet</artifactId>
			<version>9.3.2.v20150730</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.3</version>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jaudiolibs</groupId>
				<artifactId>jnajack</artifactId>
				<version>1.4.0</version>
			</dependency>
			<dependency>
				<groupId>org.jaudiolibs</groupId>
				<artifactId>audioservers-api</artifactId>
				<version>2.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.jaudiolibs</groupId>
				<artifactId>audioservers-jack</artifactId>
				<version>2.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.jaudiolibs</groupId>
				<artifactId>audioservers-javasound</artifactId>
				<version>2.0.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>